GpgOL: Security Approval reports "Operation Failed" error if key generation was canceled
Closed, ResolvedPublic

Assigned To
Authored By
ikloecker
Nov 16 2023, 11:49 AM

Description

How to reproduce:

  • Try to a signed mail without a certificate for the sender.
  • Click "Generate" to start key generation.
  • Click Cancel when being asked for the password.
  • Select "Don't confirm identity and integrity"
  • Click OK

The following error message is shown:

Note: I used test_keyresolver --sender foo@bar.baz to reproduce this on Linux.

Event Timeline

ikloecker triaged this task as Normal priority.
ikloecker created this task.
ikloecker added projects: Restricted Project, gpgol.
aheinecke added a subscriber: aheinecke.

Not important for VSD 3.2 but yes I would like to see that fixed. Especially since we want the resolver also in KMail.

ikloecker changed the task status from Open to Testing.Nov 16 2023, 12:00 PM

Fixed.

This may not be reproducible on Windows for the same reasons as T6813.

I cherry picked it anyway. See my notes in T6813 I think I will at least workaround that one tomorrow.

Works on windows, too. VS-Desktop-3.1.90.295-Beta

ebo edited projects, added vsd32 (vsd-3.2.0); removed vsd32.
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Nov 24 2023, 11:44 AM
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

No error message in that case for Gpg4win 4.4.o either