Don't treat canceled key generation as success or error

GnuPG-bug-id: 6823